kubernetes/apps/demo-api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-api
  namespace: demo
  labels:
    app: demo-api
    app.kubernetes.io/name: demo-api
    app.kubernetes.io/part-of: ec2-gitops-project
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demo-api
                port:
                  number: 80
